# api/controllers/user.js
@@ -1,6 +1,6 @@
 var db    = require('../helpers/db')
 
-module.exports = { getAllUsers, getUserByID }
+module.exports = { getAllUsers, getUserByID, getMyProfile }
 
 function getAllUsers(req, res) {
     db.findAllUsers(function(err, result) {
@@ -28,5 +28,16 @@ function getUserByID(req, res) {
 }
 
 function getMyProfile(req, res) {
-
+    var token = req.swagger.params.auth.value
+    require('../helpers/token').verify(token, function(isVerified) {
+        if (isVerified) {
+            var id = req.swagger.params.id.value
+            db.findUserByID(id, function(err, result) {
+                if (err) return res.status(400).json(err.message)
+                res.json(result)
+            })
+        } else {
+            res.status(400).json({message: "unauthorized token"})
+        }
+    })
 }
